# Gomoku

./: .gitignore  CMakeLists.txt  README.md  build.sh  game.hpp  main.cc  player.hpp
include/: engine.h  game.h  mcts.h  network.h  train.h  vars.h
model/: FIR-8x64i3@9336.param  FIR-8x8by5_best.param
src/: engine.cc  game.cc  main.cc  mcts.cc  network.cc  train.cc  vars.h
